// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Author /> component should render the component in default state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 0;
  padding-bottom: 8px;
}

.emotion-2 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.75;
  font-weight: 700;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding: 0;
}

.emotion-4.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-4.Mui-selected {
  background-color: rgba(75, 94, 64, 0.08);
}

.emotion-4.Mui-selected.Mui-focusVisible {
  background-color: rgba(75, 94, 64, 0.2);
}

.emotion-4.Mui-disabled {
  opacity: 0.38;
}

.emotion-4:hover {
  background-color: transparent;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 40px;
  height: 40px;
  margin-right: 8px;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-7 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
}

<body>
    <div>
      <ul
        class="MuiList-root MuiList-padding MuiList-subheader emotion-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 emotion-1 emotion-2"
        >
          sidebar.author.title
        </h6>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding emotion-3 emotion-4"
        >
          <a
            href="mailto:verdaccio.user@verdaccio.org?subject=verdaccio@4.0.0"
            target="_top"
          >
            <div
              class="MuiAvatar-root MuiAvatar-circular emotion-5"
            >
              <img
                alt="verdaccio user"
                class="MuiAvatar-img emotion-6"
                src="https://www.gravatar.com/avatar/000000"
              />
            </div>
          </a>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 emotion-7"
          >
            verdaccio user
          </h6>
        </li>
      </ul>
    </div>
  </body>,
  "container": .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 0;
  padding-bottom: 8px;
}

.emotion-2 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.75;
  font-weight: 700;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding: 0;
}

.emotion-4.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-4.Mui-selected {
  background-color: rgba(75, 94, 64, 0.08);
}

.emotion-4.Mui-selected.Mui-focusVisible {
  background-color: rgba(75, 94, 64, 0.2);
}

.emotion-4.Mui-disabled {
  opacity: 0.38;
}

.emotion-4:hover {
  background-color: transparent;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 40px;
  height: 40px;
  margin-right: 8px;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-7 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
}

<div>
    <ul
      class="MuiList-root MuiList-padding MuiList-subheader emotion-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 emotion-1 emotion-2"
      >
        sidebar.author.title
      </h6>
      <li
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding emotion-3 emotion-4"
      >
        <a
          href="mailto:verdaccio.user@verdaccio.org?subject=verdaccio@4.0.0"
          target="_top"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular emotion-5"
          >
            <img
              alt="verdaccio user"
              class="MuiAvatar-img emotion-6"
              src="https://www.gravatar.com/avatar/000000"
            />
          </div>
        </a>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 emotion-7"
        >
          verdaccio user
        </h6>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Author /> component should render the component when there is no author email 1`] = `
{
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 0;
  padding-bottom: 8px;
}

.emotion-2 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.75;
  font-weight: 700;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding: 0;
}

.emotion-4.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-4.Mui-selected {
  background-color: rgba(75, 94, 64, 0.08);
}

.emotion-4.Mui-selected.Mui-focusVisible {
  background-color: rgba(75, 94, 64, 0.2);
}

.emotion-4.Mui-disabled {
  opacity: 0.38;
}

.emotion-4:hover {
  background-color: transparent;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 40px;
  height: 40px;
  margin-right: 8px;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-7 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
}

<body>
    <div>
      <ul
        class="MuiList-root MuiList-padding MuiList-subheader emotion-0"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 emotion-1 emotion-2"
        >
          sidebar.author.title
        </h6>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding emotion-3 emotion-4"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular emotion-5"
          >
            <img
              alt="verdaccio user"
              class="MuiAvatar-img emotion-6"
              src="https://www.gravatar.com/avatar/000000"
            />
          </div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle2 emotion-7"
          >
            verdaccio user
          </h6>
        </li>
      </ul>
    </div>
  </body>,
  "container": .emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 0;
  padding-bottom: 8px;
}

.emotion-2 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.75;
  font-weight: 700;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding: 0;
}

.emotion-4.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-4.Mui-selected {
  background-color: rgba(75, 94, 64, 0.08);
}

.emotion-4.Mui-selected.Mui-focusVisible {
  background-color: rgba(75, 94, 64, 0.2);
}

.emotion-4.Mui-disabled {
  opacity: 0.38;
}

.emotion-4:hover {
  background-color: transparent;
}

.emotion-5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 40px;
  height: 40px;
  margin-right: 8px;
}

.emotion-6 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-7 {
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
}

<div>
    <ul
      class="MuiList-root MuiList-padding MuiList-subheader emotion-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle1 emotion-1 emotion-2"
      >
        sidebar.author.title
      </h6>
      <li
        class="MuiListItem-root MuiListItem-gutters MuiListItem-padding emotion-3 emotion-4"
      >
        <div
          class="MuiAvatar-root MuiAvatar-circular emotion-5"
        >
          <img
            alt="verdaccio user"
            class="MuiAvatar-img emotion-6"
            src="https://www.gravatar.com/avatar/000000"
          />
        </div>
        <h6
          class="MuiTypography-root MuiTypography-subtitle2 emotion-7"
        >
          verdaccio user
        </h6>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
